tests/type-errors/import_arl_fun_error_side_effect.arl
archetype import_arl_fun_error_side_effect

import "../passed/import_arl_fun_def.arl"

variable res : unit = Unit

entry exec() {
  res := import_arl_fun_def::f_write_storage()
}
